# wms_flutter_rust

wms_flutter_demo/: pubspec.yaml
wms_flutter_demo/lib/: main.dart
wms_flutter_demo/lib/components/base/: app_scaffold.dart  custom_app_bar.dart  custom_bottom_nav.dart  custom_drawer.dart
wms_flutter_demo/lib/components/common/: app_modal.dart  basket_detail_modal.dart  bin_location_modal.dart  custom_button.dart  custom_card.dart  rack_detail_modal.dart  rfid_scanned_items_modal.dart  stock_out_action_modal.dart
wms_flutter_demo/lib/components/forms/: form_date_field.dart  form_dropdown_field.dart  form_section_card.dart  form_text_field.dart
wms_flutter_demo/lib/config/constants/: app_colors.dart  app_string.dart
wms_flutter_demo/lib/config/localization/: app_strings.dart  localization_provider.dart
wms_flutter_demo/lib/config/routes/: app_router.dart
wms_flutter_demo/lib/l10n/: app_en.arb  app_vi.arb
wms_flutter_demo/lib/models/: scanned_item.dart
wms_flutter_demo/lib/providers/: former_master_data_provider.dart
wms_flutter_demo/lib/screens/: empty_former_stock_in_screen.dart  empty_former_stock_out_screen.dart  former_master_data_screen.dart  former_stock_in_screen.dart  former_stock_out_screen.dart  home_screen.dart
wms_flutter_demo/lib/services/: api_service.dart  rfid_scanner.dart  server_config_service.dart
wms_flutter_demo/lib/widgets/: bin_selection_modal.dart  server_config_dialog.dart
wms_rust_demo/: .env  Cargo.toml  payload.json
wms_rust_demo/src/: main.rs
(+2 files in other folders)
